[package]
name = "embedded_test_harness"
version = "0.1.1"
authors = ["erdnaxe", "yhql"]
edition = "2021"
description = "Rust no_std test harness"
repository = "https://github.com/aiooss-ledger/embedded_test_harness/"
license = "MIT"

[dependencies]
panic-semihosting = "0.6.0"
cortex-m-semihosting = "0.3.7"
